<resources>
    <string name="app_name">My Application21</string>
    <string name="banner_id" translatable="false">ca-app-pub-3940256099942544/3419835294</string>

    <string name="my_ads">Мои обьявления</string>
    <string name="cars_ads">Транспорт</string>
    <string name="pc_ads">Компьютеры</string>
    <string name="smartphone_ads">Смартфоны</string>
    <string name="house_ads">Недвижимость</string>
    <string name="dm_ads">Бытовая техника</string>
    <string name="business_ads">Готовый бизнес</string>
    <string name="uslugi_ads">Услуги</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_up_button">Зарегистрироваться</string>
    <string name="sign_in">Вход</string>
    <string name="sign_in_button">Войти</string>
    <string name="ok">OK</string>
    <string name="alert">Внимание!</string>
    <string name="email_not_verified">Подтвердите свою почту!</string>
    <string name="email_verification">Вам отправлено подтверждение на почту.Проверьте свой Email</string>
    <string name="sign_out">Выход</string>
    <string name="accaunt">Аккаунт</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="sign_in_our_up">Войдите или зарегистрируйтесь</string>

    <!-- EditActivity -->
    <string name="edit_ac_title">Название</string>
    <string name="edit_ac_price">Цена</string>
    <string name="edit_ac_description">Описание</string>
    <string name="edit_ac_telephone">Телефон</string>


    <string name="toogle_open">Открыть</string>
    <string name="toogle_close">Закрыть</string>

    <!-- POSTADAPTER -->
    <string name="delete_title">Удалить обьявление?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="item_deleted">Обьявление удалено!</string>
    <string name="delete_message">Вы действительно хотите удалить обьявление?</string>

    <!-- ShowActivity -->
    <string name="price">Цена:</string>
    <string name="tel">Телефон:</string>
    <string name="emailDisc" translatable="false">Email:</string>

    <!-- ChooseActivity -->
    <string name="main_image">Главное фото</string>
    <string name="image2">Фото 2</string>
    <string name="image3">Фото 3</string>

    <string name="google_sign_up">Google Sign Up</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="send_email_again" translatable="false">Отправить снова</string>
     <string name="sign_link_message" translatable="false">Внимание! У Вас уже есть аккаунт. Войдите в Ваш существубщий аккаунт для регистрации</string>
    <string name="forget_password" translatable="false">Забыли пароль?</string>
    <string name="sent_reset_password" translatable="false">Отправить</string>
    <string name="forget_password_message" translatable="false">Для восстановления пароля ввидите Ваш Email.</string>
    <string name="email_is_sent" translatable="false">Инструкция по восстановлению пароля отправлена на Вашу почту.</string>
    <string name="different" translatable="false">Разное</string>


</resources>
