<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ads_main_bg">

    <EditText
        android:id="@+id/edDisc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/edit_ac_description"
        android:inputType="textMultiLine|textPersonName"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edTel"
        app:layout_constraintStart_toStartOf="@+id/edTel"
        app:layout_constraintTop_toBottomOf="@+id/edEmailAd" />


    <EditText
        android:id="@+id/edTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edit_ac_title"
        android:inputType="textMultiLine|textPersonName|textImeMultiLine"
        android:onClick="onClickSavePost"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <androidx.viewpager.widget.ViewPager

        android:id="@+id/view_pager2"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:onClick="onClickImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

    </androidx.viewpager.widget.ViewPager>

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="52dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/actionBarItemBackground"
        android:onClick="onClickImage"
        app:layout_constraintEnd_toEndOf="@+id/view_pager2"
        app:layout_constraintTop_toTopOf="@+id/view_pager2"
        app:srcCompat="@drawable/ic_media" />

    <EditText
        android:id="@+id/edPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edit_ac_price"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edTitle"
        app:layout_constraintStart_toStartOf="@+id/edTitle"
        app:layout_constraintTop_toBottomOf="@+id/edTitle" />

    <TextView
        android:id="@+id/tvImagesCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:padding="5dp"
        android:text="TextView"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/view_pager2"
        app:layout_constraintEnd_toEndOf="@+id/view_pager2"
        app:layout_constraintStart_toStartOf="@+id/view_pager2" />

    <EditText
        android:id="@+id/edTel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edit_ac_telephone"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edPrice"
        app:layout_constraintStart_toStartOf="@+id/edPrice"
        app:layout_constraintTop_toBottomOf="@+id/edPrice" />

    <EditText
        android:id="@+id/edEmailAd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/edTel"
        app:layout_constraintStart_toStartOf="@+id/edTel"
        app:layout_constraintTop_toBottomOf="@+id/edTel" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="@+id/view_pager2"
        app:layout_constraintStart_toStartOf="@+id/view_pager2"
        app:layout_constraintTop_toBottomOf="@+id/view_pager2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="67dp"
        android:layout_height="59dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="onClickSavePost"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/edDisc"
        app:layout_constraintEnd_toEndOf="@+id/edDisc"
        app:srcCompat="@drawable/ic_save" />

</androidx.constraintlayout.widget.ConstraintLayout>